# dslog

./: CMakeLists.txt  build.sh  logMgr.c  logMgr.conf  logMgr.h  logMgr.xml  logcfgp.c  logcfgp.h  logindef.h  lognwf.c  lognwf.h
